--- a/app/src/main/res/layout/dialog_edit_or_add_knowledge.xml
+++ b/app/src/main/res/layout/dialog_edit_or_add_knowledge.xml
@@ -52,8 +52,9 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:inputType="textAutoCorrect|textCapSentences|textAutoComplete"
-                android:selectAllOnFocus="true" />
+                android:inputType="textMultiLine|textCapSentences"
+                android:selectAllOnFocus="true"
+                android:singleLine="false" />
         </LinearLayout>
 
         <LinearLayout
