--- a/app/src/main/res/menu/task_bar_knowledge.xml
+++ b/app/src/main/res/menu/task_bar_knowledge.xml
@@ -48,9 +48,13 @@
                 android:checkable="true"
                 android:title="Nach Name" />
             <item
+                android:id="@+id/taskBar_knowledge_filterByContent"
+                android:checkable="true"
+                android:title="Nach Inhalt" />
+            <item
                 android:id="@+id/taskBar_knowledge_filterByCategory"
                 android:checkable="true"
-                android:title="Nach Darsteller" />
+                android:title="Nach Kategorie" />
         </menu>
     </item>
 
