--- a/app/src/main/res/layout/activity_catigorys.xml
+++ b/app/src/main/res/layout/activity_catigorys.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activitys.Videos.VideoActivity">
+    tools:context=".Activitys.Content.VideoActivity">
 
     <SearchView
         android:id="@+id/catigorys_search"
