--- a/app/src/main/res/layout/dialog_detail_knowledge.xml
+++ b/app/src/main/res/layout/dialog_detail_knowledge.xml
@@ -106,6 +106,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center_vertical"
             android:orientation="horizontal">
 
             <TextView
@@ -120,6 +121,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1" />
+
+            <ImageView
+                android:id="@+id/dialog_detailKnowledge_listSources"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:clickable="true"
+                android:foreground="@drawable/ripple"
+                android:padding="5dp"
+                app:srcCompat="@drawable/ic_list" />
         </LinearLayout>
 
         <LinearLayout
