--- a/app/src/main/res/layout/activity_video.xml
+++ b/app/src/main/res/layout/activity_video.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activitys.Content.VideoActivity">
+    tools:context=".Activities.Content.VideoActivity">
 
     <SearchView
-        android:id="@+id/videos_search"
+        android:id="@+id/search"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:focusable="auto"
@@ -26,7 +26,7 @@
         android:layout_height="1dp"
         android:layout_weight="1"
         android:background="?android:attr/listDivider"
-        app:layout_constraintTop_toBottomOf="@id/videos_search" />
+        app:layout_constraintTop_toBottomOf="@id/search" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/videos_recycler"
