--- a/app/src/main/res/layout/main_fragment_videos.xml
+++ b/app/src/main/res/layout/main_fragment_videos.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:fillViewport="true"
     android:orientation="vertical"
-    tools:context=".Activitys.Main.MainActivity">
+    tools:context=".Activities.Main.MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
