--- a/app/src/main/res/layout/activity_owe.xml
+++ b/app/src/main/res/layout/activity_owe.xml
@@ -14,7 +14,7 @@
         android:focusable="auto"
         android:iconifiedByDefault="false"
         android:queryBackground="@android:color/transparent"
-        android:queryHint="Titel, Kategorie"
+        android:queryHint="Titel, Beschreibung, Person"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -27,11 +27,24 @@
         android:background="?android:attr/listDivider"
         app:layout_constraintTop_toBottomOf="@id/search" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingHorizontal="8dp"
-        app:layout_constraintTop_toBottomOf="@id/videos_divider" />
+        android:layout_height="match_parent">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintTop_toBottomOf="@id/videos_divider" />
+
+        <TextView
+            android:id="@+id/no_item"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="20dp"
+            android:text="Kein Eintrag"
+            android:textStyle="italic" />
+    </FrameLayout>
 
 </LinearLayout>
