Schulden vollendet (Ausgleich eingebaut)

--- a/app/src/main/res/layout/main_fragment_owe.xml
+++ b/app/src/main/res/layout/main_fragment_owe.xml
@@ -263,7 +263,8 @@
                 android:elevation="3dp"
                 android:foreground="@drawable/ripple"
                 android:gravity="center"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:onClick="showTradeOffDialog">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
@@ -294,6 +295,7 @@
                         app:layout_constraintTop_toTopOf="parent">
 
                         <TextView
+                            android:id="@+id/main_owe_tradeOff_label"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="8dp"
