--- a/app/src/main/res/layout/list_item_owe.xml
+++ b/app/src/main/res/layout/list_item_owe.xml
@@ -83,6 +83,10 @@
                     android:ellipsize="marquee"
                     android:fadingEdge="horizontal"
                     android:singleLine="true"
+                    android:focusable="true"
+                    android:focusableInTouchMode="true"
+                    android:marqueeRepeatLimit="marquee_forever"
+                    android:scrollHorizontally="true"
                     tools:text="Text..." />
 
             </LinearLayout>
