--- a/app/src/main/res/layout/popup_standard_list.xml
+++ b/app/src/main/res/layout/popup_standard_list.xml
@@ -1,29 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="horizontal">
-
     <LinearLayout
         android:id="@+id/popup_standardList_clickable"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_margin="4dp"
         android:background="@drawable/rounded_background"
         android:clickable="true"
         android:elevation="3dp"
         android:foreground="@drawable/ripple"
         android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:padding="5dp">
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/popup_standardList_text"
             android:layout_width="0dp"
             android:layout_height="35dp"
-            android:layout_marginHorizontal="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="13dp"
+            android:layout_marginVertical="5dp"
             android:layout_weight="1"
             android:gravity="center_vertical"
             android:textSize="18sp"
@@ -33,7 +30,6 @@
             android:id="@+id/popup_standardList_divider"
             android:layout_width="1dp"
             android:layout_height="25dp"
-            android:layout_marginRight="3dp"
             android:background="?android:attr/listDivider"
             android:visibility="gone"
             tools:visibility="visible" />
@@ -41,10 +37,10 @@
         <ImageView
             android:id="@+id/popup_standardList_sub"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
             android:clickable="true"
-            android:foreground="@drawable/ripple"
+            android:foreground="@drawable/ripple_right"
             android:padding="5dp"
             android:tint="@color/colorDrawable"
             android:visibility="gone"
@@ -52,5 +48,3 @@
             tools:visibility="visible" />
     </LinearLayout>
 
-
-</LinearLayout>
