--- a/app/src/main/res/layout/dialog_edit_views.xml
+++ b/app/src/main/res/layout/dialog_edit_views.xml
@@ -16,8 +16,7 @@
         android:layout_gravity="end"
         android:gravity="bottom"
         android:layout_marginTop="8dp"
-        android:orientation="horizontal"
-        android:minHeight="1000dp">
+        android:orientation="horizontal">
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/dialog_editViews_add"
